button overflow fix for IE

--- a/shared/css/style.css
+++ b/shared/css/style.css
@@ -55,6 +55,7 @@ button {
   border: none;
   cursor: pointer;
   font-family: 'Source Sans Pro', sans-serif;
+  overflow: visible;
   padding: 0; }
 
 .btn-primary {
